[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/futile-pro-v1/FutilePro.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/matchup-pro-v1.1/MatchupPro.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PlayersPan.gd" type="Script" id=3]
[ext_resource path="res://Sprites/GUI/GUI.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 81, 97, 30, 30 )

[sub_resource type="DynamicFont" id=3]
size = 44
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 52
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_space = -8
font_data = ExtResource( 1 )

[node name="PlayersPan" type="Control"]
process_priority = -11
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Panel" type="TextureRect" parent="."]
process_priority = -17
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -250.0
margin_right = 425.0
margin_bottom = 250.0
texture = SubResource( 4 )
expand = true

[node name="PlayersInfos" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
margin_left = 25.0
margin_top = 50.0
margin_right = 25.0
margin_bottom = 130.0

[node name="WinnerSentence" type="Label" parent="Panel/PlayersInfos"]
margin_right = 850.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
align = 1

[node name="espace" type="MarginContainer" parent="Panel/PlayersInfos"]
margin_top = 40.0
margin_right = 850.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 40 )

[node name="PlayerInfos" type="HBoxContainer" parent="Panel/PlayersInfos"]
visible = false
margin_top = 84.0
margin_right = 850.0
margin_bottom = 124.0

[node name="Victories" type="Label" parent="Panel/PlayersInfos/PlayerInfos"]
margin_left = 130.0
margin_right = 150.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 1, 0.992157, 0.129412, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Username" type="Label" parent="Panel/PlayersInfos/PlayerInfos"]
margin_left = 385.0
margin_right = 463.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 1, 0.992157, 0.129412, 1 )
custom_fonts/font = SubResource( 2 )
text = "ZEDD"
align = 1

[node name="State" type="Label" parent="Panel/PlayersInfos/PlayerInfos"]
margin_left = 660.0
margin_right = 758.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 1, 0.992157, 0.129412, 1 )
custom_fonts/font = SubResource( 2 )
text = "ready!"
align = 2

[node name="PlayerInfos2" type="HBoxContainer" parent="Panel/PlayersInfos"]
visible = false
margin_top = 128.0
margin_right = 850.0
margin_bottom = 168.0

[node name="Victories" type="Label" parent="Panel/PlayersInfos/PlayerInfos2"]
margin_left = 130.0
margin_right = 150.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Username" type="Label" parent="Panel/PlayersInfos/PlayerInfos2"]
margin_left = 395.0
margin_right = 453.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "ZED"
align = 1

[node name="State" type="Label" parent="Panel/PlayersInfos/PlayerInfos2"]
margin_left = 630.0
margin_right = 788.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "connected"
align = 2

[node name="PlayerInfos3" type="HBoxContainer" parent="Panel/PlayersInfos"]
visible = false
margin_top = 84.0
margin_right = 800.0
margin_bottom = 124.0

[node name="Victories" type="Label" parent="Panel/PlayersInfos/PlayerInfos3"]
margin_left = 122.0
margin_right = 142.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Username" type="Label" parent="Panel/PlayersInfos/PlayerInfos3"]
margin_left = 371.0
margin_right = 429.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "ZED"
align = 1

[node name="State" type="Label" parent="Panel/PlayersInfos/PlayerInfos3"]
margin_left = 589.0
margin_right = 747.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "connected"
align = 2

[node name="PlayerInfos4" type="HBoxContainer" parent="Panel/PlayersInfos"]
visible = false
margin_top = 84.0
margin_right = 800.0
margin_bottom = 124.0

[node name="Victories" type="Label" parent="Panel/PlayersInfos/PlayerInfos4"]
margin_left = 122.0
margin_right = 142.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Username" type="Label" parent="Panel/PlayersInfos/PlayerInfos4"]
margin_left = 371.0
margin_right = 429.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "ZED"
align = 1

[node name="State" type="Label" parent="Panel/PlayersInfos/PlayerInfos4"]
margin_left = 589.0
margin_right = 747.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "connected"
align = 2

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -112.0
margin_right = 101.0
margin_bottom = -50.0
size_flags_horizontal = 4
size_flags_vertical = 10
custom_fonts/font = SubResource( 1 )
text = " READY! "
